<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MultipleChoiceQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@color/background"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivQuizGoBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cerrar_pantalla"
            android:src="@drawable/ic_baseline_close_24" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16sp" />

        <TextView
            android:id="@+id/tvQuizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz_de_respuesta_multiple"
            android:textSize="32sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/numero_de_preguntas"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvQuizQuestionCount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:ignore="TextContrastCheck"
                    tools:text="10" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/pbQuizCounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvQuizCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/pbQuizCounter"
                    app:layout_constraintEnd_toEndOf="@+id/pbQuizCounter"
                    app:layout_constraintStart_toStartOf="@+id/pbQuizCounter"
                    app:layout_constraintTop_toTopOf="@+id/pbQuizCounter"
                    tools:ignore="TextContrastCheck"
                    tools:text="10" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="Enunciado de la pregunta Enunciado de la pregunta Enunciado de la pregunta" />

        <Button
            android:id="@+id/btnOption1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/first_option" />

        <Button
            android:id="@+id/btnOption2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/second_option" />

        <Button
            android:id="@+id/btnOption3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/third_option" />

        <Button
            android:id="@+id/btnOption4"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/fourth_option" />

        <Button
            android:id="@+id/btnNextQuestion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_marginTop="32sp"
            android:text="@string/siguiente_pregunta" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>