<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:contentDescription="@string/cerrar_pantalla"
        android:src="@drawable/ic_baseline_close_24" />

    <TextView
        android:id="@+id/tvQuizResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Resultado"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="32sp">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/piQuizScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:indicatorColor="@color/colorAccent"
            app:indicatorSize="100dp"
            app:trackColor="@color/lightGray"
            app:trackCornerRadius="20dp"
            app:trackThickness="8dp"
            tools:progress="60" />

        <TextView
            android:id="@+id/tvQuizScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="100%" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48sp"
        android:layout_marginVertical="8sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/numero_de_preguntas"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuizResultCount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="TextContrastCheck"
            tools:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48sp"
        android:layout_marginVertical="8sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/preguntas_correctas"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuizRightCount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/green"
            android:gravity="center"
            tools:ignore="TextContrastCheck"
            tools:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48sp"
        android:layout_marginVertical="8sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/preguntas_erroneas"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuizWrongCount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/red"
            tools:ignore="TextContrastCheck"
            tools:text="N/A" />
    </LinearLayout>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="16sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/terminar"
        android:textColor="@color/white" />

</LinearLayout>